feat: add more endpoint for relationship and fix RBAC
