# docs/swagger.json
@@ -9,7 +9,7 @@
         },
         "version": "1.0"
     },
-    "host": "rescuehub-production.up.railway.app",
+    "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
         "/disasters": {
@@ -39,6 +39,9 @@
             },
             "post": {
                 "security": [
+                    {
+                        "BearerAuth": []
+                    },
                     {
                         "BearerAuth": []
                     }
@@ -135,6 +138,9 @@
             },
             "put": {
                 "security": [
+                    {
+                        "BearerAuth": []
+                    },
                     {
                         "BearerAuth": []
                     }
@@ -392,13 +398,55 @@
                 }
             }
         },
-        "/disasters/{id}/shelters": {
+        "/disasters/{id}/refugees": {
             "get": {
-                "security": [
+                "description": "Menampilkan daftar pengungsi untuk bencana tertentu",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Disaster"
+                ],
+                "summary": "Get refugees by disaster ID",
+                "parameters": [
                     {
-                        "BearerAuth": []
+                        "type": "integer",
+                        "description": "Disaster ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/structs.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/structs.APIResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/structs.APIResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/structs.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/disasters/{id}/shelters": {
+            "get": {
                 "description": "Mendapatkan shelter berdasarkan ID bencana",
                 "produces": [
                     "application/json"
@@ -525,6 +573,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mencatat distribusi bantuan",
                 "consumes": [
                     "application/json"
@@ -613,6 +666,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Memperbarui distribusi bantuan",
                 "consumes": [
                     "application/json"
@@ -664,6 +722,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menghapus distribusi bantuan",
                 "consumes": [
                     "application/json"
@@ -708,6 +771,11 @@
         },
         "/donations": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan daftar donasi",
                 "consumes": [
                     "application/json"
@@ -787,6 +855,11 @@
         },
         "/donations/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan donasi berdasarkan ID",
                 "consumes": [
                     "application/json"
@@ -829,6 +902,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Memperbarui donasi",
                 "consumes": [
                     "application/json"
@@ -880,6 +958,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menghapus donasi",
                 "consumes": [
                     "application/json"
@@ -924,6 +1007,11 @@
         },
         "/emergency_reports": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan daftar laporan darurat",
                 "consumes": [
                     "application/json"
@@ -1003,6 +1091,11 @@
         },
         "/emergency_reports/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan laporan darurat berdasarkan ID",
                 "consumes": [
                     "application/json"
@@ -1045,6 +1138,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Memperbarui laporan darurat",
                 "consumes": [
                     "application/json"
@@ -1096,6 +1194,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menghapus laporan darurat",
                 "consumes": [
                     "application/json"
@@ -1173,6 +1276,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mencatat jalur evakuasi",
                 "consumes": [
                     "application/json"
@@ -1261,6 +1369,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Memperbarui jalur evakuasi",
                 "consumes": [
                     "application/json"
@@ -1312,6 +1425,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menghapus jalur evakuasi",
                 "consumes": [
                     "application/json"
@@ -1389,6 +1507,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mencatat bantuan logistik",
                 "consumes": [
                     "application/json"
@@ -1477,6 +1600,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Memperbarui bantuan logistik",
                 "consumes": [
                     "application/json"
@@ -1528,6 +1656,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menghapus bantuan logistik",
                 "consumes": [
                     "application/json"
@@ -1605,6 +1738,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Membuat data pengungsi baru",
                 "consumes": [
                     "application/json"
@@ -1693,6 +1831,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Memperbarui data pengungsi",
                 "consumes": [
                     "application/json"
@@ -1744,6 +1887,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menghapus data pengungsi",
                 "consumes": [
                     "application/json"
@@ -1862,6 +2010,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Membuat shelter baru",
                 "consumes": [
                     "application/json"
@@ -1950,6 +2103,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Memperbarui shelter",
                 "consumes": [
                     "application/json"
@@ -2001,6 +2159,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menghapus shelter",
                 "consumes": [
                     "application/json"
@@ -2171,11 +2334,6 @@
                 }
             },
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Membuat user baru",
                 "consumes": [
                     "application/json"
@@ -2533,6 +2691,70 @@
                 }
             }
         },
+        "/users/{id}/change-role": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Admin dapat mengubah role siapa saja, sedangkan user hanya bisa mengubah role sendiri ke donor atau user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Mengubah role pengguna",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "List role: admin, donor, user",
+                        "name": "role",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/structs.ChangeUserRole"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/structs.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/structs.APIResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/structs.APIResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/structs.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}/donations": {
             "get": {
                 "security": [
@@ -2703,6 +2925,11 @@
         },
         "/volunteers": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan daftar relawan",
                 "consumes": [
                     "application/json"
@@ -2776,6 +3003,11 @@
         },
         "/volunteers/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mendapatkan relawan berdasarkan ID",
                 "consumes": [
                     "application/json"
@@ -2818,6 +3050,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Memperbarui relawan",
                 "consumes": [
                     "application/json"
@@ -2869,6 +3106,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Menghapus relawan",
                 "consumes": [
                     "application/json"
@@ -2923,6 +3165,14 @@
                     "type": "string"
                 },
                 "result": {}
+            }
+        },
+        "structs.ChangeUserRole": {
+            "type": "object",
+            "properties": {
+                "role": {
+                    "type": "string"
+                }
             }
         },
         "structs.Disaster": {
@@ -3228,6 +3478,9 @@
                 "disaster_id": {
                     "type": "integer"
                 },
+                "donor_id": {
+                    "type": "integer"
+                },
                 "location": {
                     "type": "string"
                 },
@@ -3236,9 +3489,6 @@
                 },
                 "status": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         }
